Implement a timer_hub:i() function

--- a/timer_switch/rebar.config
+++ b/timer_switch/rebar.config
@@ -1,9 +1,10 @@
 {erl_opts, [debug_info]}.
 {deps, []}.
 
-{shell, [
-    {apps, [timer_switch]}
-]}.
+{shell,
+ [{apps, [timer_switch]},
+  {config, "config/sys.config"}
+ ]}.
 
 {relx, [{release, {timer_switch, "0.1.0"},
          [ timer_switch
@@ -11,8 +12,8 @@
            %%, observer
            %%, wx
            %%, runtime_tools
-         ]}
-]}.
+         ]},
+        {sys_config, "config/sys.config"}]}.
 
 {profiles, [{prod, [{relx,
                      [{mode, prod}
